--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "cd backend && npm install && npm run build",
+  "buildCommand": "npm install && cd backend && npm install && npm run build",
+  "installCommand": "npm install && cd backend && npm install",
   "builds": [
     {
       "src": "api/**/*.ts",
