--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,9 @@
   "description": "Employee Monitoring System Backend",
   "main": "dist/index.js",
   "type": "module",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc && node fix-imports.mjs",
