--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc && node fix-imports.mjs",
     "start": "node dist/index.js",
-    "vercel-build": "npm run build",
+    "vercel-build": "npm install && npm run build",
     "lint": "eslint src --ext .ts",
     "seed-points": "node seed-points-data.mjs"
   },
