--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,15 @@
 {
   "version": 2,
-  "buildCommand": "npm install && cd backend && npm install && npm run build",
-  "outputDirectory": "backend/dist",
-  "functions": {
-    "api/index.ts": {
-      "runtime": "@vercel/node@3.0.0"
+  "builds": [
+    {
+      "src": "backend/package.json",
+      "use": "@vercel/node"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/api/index.ts"
+      "dest": "backend/dist/index.js"
     }
   ]
 }
